# notify

./: .dockerignore  Cargo.toml  Makefile  README.md  watchx.yaml
deployments/: Dockerfile  Makefile  deployment.yaml  service.yaml
notify-chart/: Chart.yaml  values.yaml
notify-chart/template/: deployment.yaml
notify-chart/templates/: deployment.yaml  hpa.yaml  service.yaml  servicemonitor.yaml
src/: main.rs
src/config/: mod.rs
src/error/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/services/: buddha.rs  discord.rs  mod.rs
