[package]
name = "notify"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
mockall = "0.12"
